FC-33 create endpoint for Get List (#15)
* feat: Create endpoint to get single list data

* feat: Create swagger for Get List data
