# src/routes/lists.router.ts
@@ -7,5 +7,6 @@ const lists = new ListsController();
 router.post('/create', lists.create);
 
 router.get('/user-lists', lists.getUserLists);
+router.get('/:listID', lists.getList);
 
 export default router;
